syntax = "proto3";

                 package clothingItem;
service ClothingItemService {
 rpc createClothingItem (ClothingItemCreateInput) returns (ClothingItem) {}
rpc clothingItems (findManyParams) returns (stream ClothingItem) {}
rpc clothingItem (ClothingItemWhereUniqueInput) returns (ClothingItem) {}
rpc updateClothingItem (ClothingItemUpdateInput) returns (ClothingItem) {}
rpc deleteClothingItem (ClothingItemWhereUniqueInput) returns (ClothingItem) {} 
 }
message ClothingItemCreateInput {
string id = 1;
string createdAt = 2;
string updatedAt = 3;
string name = 4;
repeated string typeField = 5;
repeated string rarity = 6;
};
message ClothingItem {
string id = 1;
string createdAt = 2;
string updatedAt = 3;
string name = 4;
repeated string typeField = 5;
repeated string rarity = 6;
};
message ClothingItemWhereUniqueInput {
string id = 1;
string createdAt = 2;
string updatedAt = 3;
string name = 4;
repeated string typeField = 5;
repeated string rarity = 6;
};
message ClothingItemUpdateInput {
string id = 1;
string createdAt = 2;
string updatedAt = 3;
string name = 4;
repeated string typeField = 5;
repeated string rarity = 6;
};
message findManyParams {

};